--- a/package.json
+++ b/package.json
@@ -12,11 +12,19 @@
   "author": "Augusto Moço Zambello",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "email-validator": "^2.0.4",
     "express": "^4.17.1",
-    "mongoose": "^5.12.3"
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
+    "mongoose": "^5.12.3",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.1",
+    "@types/multer": "^1.4.5",
     "@types/node": "^15.0.2",
     "dotenv": "^9.0.2",
     "nodemon": "^2.0.7"
