--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Augusto Moço Zambello",
   "license": "ISC",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.1.16",
     "base64-to-image": "^1.0.2",
     "bcryptjs": "^2.4.3",
     "email-validator": "^2.0.4",
@@ -19,12 +20,12 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.12.3",
-    "multer": "^1.4.2",
     "nodemailer": "^6.6.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
+    "@types/googlemaps": "^3.43.3",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/multer": "^1.4.5",
     "@types/node": "^15.0.2",
