--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.1.16",
+    "axios": "^0.21.1",
     "base64-to-image": "^1.0.2",
     "bcryptjs": "^2.4.3",
     "email-validator": "^2.0.4",
@@ -23,6 +24,7 @@
     "nodemailer": "^6.6.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
     "@types/googlemaps": "^3.43.3",
